// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Tabs using the block theme without crashing 1`] = `
<ul
  className="clearfix tabs blockTabs"
>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/"
    >
      First Tab
    </a>
  </li>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/2"
    >
      Second Tab
    </a>
  </li>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/3"
    >
      Third Tab
    </a>
  </li>
</ul>
`;

exports[`Renders Tabs with react-router links as items without crashing 1`] = `
<ul
  className="clearfix tabs defaultTabs"
>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/"
      onClick={[Function]}
    >
      First Tab
    </a>
  </li>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/2"
      onClick={[Function]}
    >
      Second Tab
    </a>
  </li>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/3"
      onClick={[Function]}
    >
      Third Tab
    </a>
  </li>
</ul>
`;

exports[`Renders Tabs with simple links as items without crashing 1`] = `
<ul
  className="clearfix tabs defaultTabs"
>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/"
    >
      First Tab
    </a>
  </li>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/2"
    >
      Second Tab
    </a>
  </li>
  <li
    className="tabItem "
  >
    <a
      className=" tabLink false"
      href="/playground/3"
    >
      Third Tab
    </a>
  </li>
</ul>
`;
